# TrainerFramework

./: CMakeLists.txt  README.md
src/: Console.cpp  Console.h  Hotkeys.cpp  Hotkeys.h  Memory.cpp  Memory.h  main.cpp
src/mem/: Memory.h  Process.h
src/platform/win32/mem/: Memory.cpp  Process.cpp
src/platform/win32/script/: Compile.cpp  EncodeDirective.cpp  EncodeInstruction.cpp
src/script/: AST.h  Assembler.cpp  Assembler.h  Encode.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Script.cpp  Script.h
